# tutorials

./: .gitignore  Dockerfile  README.md  cspell.json  mcp-code-execution-analysis.md
agent2agent/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent2agent/app/: agent.py  agent_executor.py  api_server.py  client.py  slack_app_manifest.json  slack_client.py  test_client.py  try_ask_agent.py
bright-mcp-server-overview/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bright-mcp-server-overview/adk_agent/: agent.py  custom_adk_patches.py
bright-mcp-server-overview/langgraph_agent/: agent.py
bright-mcp-server-overview/slack_app/: slack_client.py
fpl-deepagent/: CODE_EXECUTION_IMPLEMENTATION.md  README.md  START.sh  TEST_QUERIES.md  fpl_utils.py  pyproject.toml  server.py
fpl-deepagent/.docs/: DESIGN_COMPLIANCE.md  NGROK_SETUP.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE_WEB_RESOURCES.md  README_DOCUMENTATION.md  WEB_RESOURCES_ARCHITECTURE_DIAGRAM.md  WEB_RESOURCES_TECHNICAL_GUIDE.md
fpl-deepagent/examples/: COMPARISON.md  README.md  code-execution-server.py
fpl-deepagent/examples/servers/fpl/: fixtures.ts  players.ts
fpl-deepagent/mcp_server/: __init__.py  storage.py  ux_components.py
fpl-deepagent/mcp_server/tools/: __init__.py  favorites.py  fixtures.py  players.py  stats.py  teams.py
fpl-deepagent/player-data/: players.json
fpl-deepagent/skills/: README.md
fpl-deepagent/web/: package-lock.json  package.json  tsconfig.json
fpl-deepagent/web/src/: PlayerComparisonComponent.tsx  PlayerDetailComponent.tsx  PlayerListComponent.tsx  hooks.ts  types.ts
shopify-store-chatgpt-app/: .env.example  .gitignore  FIXES_SUMMARY.md  IMPLEMENTATION_VERIFICATION.md  NAVIGATION_FIX.md  OPENAI_APPS_SDK_GUIDE.md  README.md  START.sh  debug_shopify.py  llm_utils.py  pyproject.toml  server.py  shopify_utils.py  test_cart.py  test_essential_oils.py  test_final_verification.py  test_id_format.py  test_search_gut_health.py  test_server_integration.py  test_shopify.py  test_shopify_utils.py
shopify-store-chatgpt-app/docs/: IMPROVEMENTS_SUMMARY.md  RENDERING_FIX.md  TEST_QUERIES.md
shopify-store-chatgpt-app/web/: package.json  test-carousel.html  tsconfig.json
shopify-store-chatgpt-app/web/src/: CartComponent.tsx  CompareProductsComponent.tsx  ProductCarouselComponent.tsx  ProductDetailComponent.tsx  hooks.ts  types.ts
smithery-example/: .env.example  langgraph-agent-client-example.py  main.py  mcp-cli-example.py  pyproject.toml
smithery-example/financial-server/: .gitignore  README.md  main.py  pyproject.toml  run_playground.sh
smithery-example/financial-server/financial_server/: server.py
smithery-example/financial-server/src/fin_research_server/: server.py  (+1 more)
smithery-example/financial-server/tests/: test_server.py
task-manager-app/: .env.example  .gitignore  README.md  START.sh  SUPABASE_START.sh  TEST_QUERIES.md  cspell.json  pyproject.toml  server.py  slack-app-manifest.example.json
task-manager-app/mcp_server/: __init__.py  auth0.py  oauth_provider.py  state.py  ux_components.py
task-manager-app/mcp_server/db/: __init__.py  pool.py
task-manager-app/mcp_server/tools/: __init__.py  notifications.py  tasks.py
task-manager-app/supabase/: config.toml  seed.sql
task-manager-app/supabase/migrations/: 20251217190000_init_task_manager.sql  20251218120000_add_task_idempotency.sql  20251218123000_fix_idempotency_constraint.sql  20251220010000_add_user_slack_credentials.sql  20251220021000_add_oauth_clients.sql
task-manager-app/web/: package.json  tsconfig.json
task-manager-app/web/src/: hooks.ts  task-board.tsx  task-create.tsx  task-detail.tsx  types.ts
(+197 files in other folders)
