[project]
name = "smithery-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[openai]>=0.3.27",
    "langchain-mcp-adapters>=0.1.10",
    "langgraph>=0.6.7",
    "mcp[cli]>=1.15.0",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = ["financial-server"]
