[project]
name = "task-manager-app"
version = "0.1.0"
description = "Task Manager MCP server with React UI widgets and Supabase Local persistence."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.6.0",
]


