[project]
name = "financial-server"
version = "0.1.0"
description = "Financial Research MCP Server with comprehensive stock analysis tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastmcp>=2.12.4",
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "yfinance>=0.2.66",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "langchain-community>=0.0.20",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]
[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"
[tool.smithery] 
server = "financial_server.server:create_server"
